--- a/contact.html
+++ b/contact.html
@@ -49,16 +49,16 @@
       </p>
       <div class="contact-details">
         <div class="contact__left">
-          Phone: +62-21 5706 222<br /><br />
+          Phone: +62-21 5706 222<br />
 
-          Fax: +62-21 5790 7002<br /><br />
+          Fax: +62-21 5790 7002<br />
 
           Email: partnership@teamrrq.com<br /><br />
         </div>
         <div class="contact__right">
-          Midplaza 2, 24th Floor<br /><br />
+          Midplaza 2, 24th Floor<br />
 
-          Jl. Jend Sudirman Kav. 10-11<br /><br />
+          Jl. Jend Sudirman Kav. 10-11<br />
 
           Jakarta 10220, Indonesia
         </div>
