--- a/org.html
+++ b/org.html
@@ -31,7 +31,7 @@
       </div>
     </header>
     <div class="organizers">
-      <h1 class="page__heading">ORGANIZATION</h1>
+      <h1 class="page__heading">ORGANIZATION TEAM</h1>
       <table style="width: 100%;">
         <tr>
           <th>ID</th>
